<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">روش تحقیق</string>

	<string name="template"><![CDATA[
<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
<html>
<head>
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
<title>Insert title here</title>


<style type="text/css">

@font-face {
   font-family: "irsans";
   src: url("file:///android_asset/irsans.ttf"); 
} 

body {
	direction: rtl;
	text-align: right;
	font-family: irsans;
}

.centers {
	text-align: center;
}

img {   display: block;   margin-left: auto;   margin-right: auto; }
</style>

</head>
<body>

    ]]>
	</string>


	<string name="feedbacktitle">برای ارسال بازخورد، فرم زیر را پر کنید ...
	</string>
	<string name="feedbackname">Your Name</string>
	<string name="feedbackemail">Your Email</string>
	<string name="feedbackbody">جزئیات بازخورد ...</string>
	<string name="feedbackresponse">آیا منتظر پاسخ این بازخورد هستید؟</string>
	<string name="feedbackbutton">ارسال بازخورد</string>
	<string name="feedbacktype">نوع بازخوردتان را وارد کنید ...</string>

	<string name="feedbacktype1">سپاسگزاری</string>
	<string name="feedbacktype2">انتقاد</string>
	<string name="feedbacktype3">پیشنهاد</string>
	<string name="feedbacktype4">گزارش خطا</string>
	<string name="feedbackmessagebody_format">به: قسمت  %1$s \n\n %2$s\n\n %3$s (%4$s) - %5$s</string>
	<string name="feedbackmessagebody_responseyes">به پاسخ نیاز دارد</string>
	<string name="feedbackmessagebody_responseno">به پاسخ نیاز ندارد</string>
	<string name="feedbackmessagesubject_format">بازخورد محتوای آموزشی (%1$s)</string>
	<string name="about_text"><![CDATA[<p> آکادمی اینترنتی eLearnEver با همیشگی نمودن آموزش از طریق انواع ابزارهای الکترونیکی، بهبود شرایط کار و زندگی مردم را هدف قرار داده است. آموزش الکترونیکی محدود به اینترنت نمی شود و گستره وسیعی از ابزارها را در بر می گیرد. همیشگی نمودن آموزش به مفهوم حذف بسیاری از محدودیتهای زمانی و مکانیست که تنها از آموزش الکترونیکی انتظار می رود. مدل فعالیت آکادمی اینترنتی eLearnEver عبارت است از به کارگیری تمام ابزارهای متعارف و غیر متعارف الکترونیکی و مخابراتی با هدف همیشگی نمودن فرایند آموزشی. آکادمی با مشخص نمودن ابزار مناسب آموزش هر دوره تلاش می کند بهترین تاثیر را بر کار و زندگی فراگیران ایجاد کند. این مدل کسب و کار آکادمی اینترنتی را از سوی وزارت کار و امور اجتماعی برنده عنوان کار آفرین برگزیده ملی نمود. اما این داستان چگونه آغاز شد؟</p>

 

<p>مرکز پژوهشي هدايتگران انديشه (تاسيس 1376) به عنوا زادگاه آکادمي اينترنتي eLearnEver پس از موفقيت در زمينه طراحي، توليد و توسعه پلتفرمهاي علم الکترونیکی، در بهار 1377 فعاليت خود را در حوزه آموزش اينترنتي با اجراي موفق دوره هاي عمومي و تخصصي آموزش اينترنتي ستاره شناسي آغاز نمود. سرانجام در بهار 1388 يکي از بزرگترين پروژه هاي آموزش الکترونیکی کشور با مشارکت تعداد زيادي از مراکز بزرگ آموزشي، پژوهشي و انتشاراتي داخل و خارج کشور آغاز گرديد تا بدين صورت در زمستان 1387 تيم تخصصي آموزش الکترونیکی مرکز پژوهشي با نام eLearnEver متولد شود.</p>

<p>نظریه مبنای عمل آکادمی بیان می نماید که چنانچه بتوانیم سازمان آموزش الکترونیکی را درست مدیریت کنیم، جامعه را مدیریت خواهیم نمود. به عبارتی مشکل اصلی زندگی بشر، کمبود دانش برای رفع مسائل خویش است. کمبود دانش، ناشی از کمبود دسترسی به فرآیندها و محتوای آموزشی کارآمد است. چنانچه موانع این دسترسی رفع گردد گامی بزرگ در رفع مشکلات جامعه و بهبود شرایط زندگی انسانها برداشته شده است.</p>

<p>اين تيم با حمایت رصدخانه کوثر.1، آزمایشگاه حیات بنیادی و تیم بین المللی UniverseAlive، در اولين گام، پایگاه اینترنتی آموزش الکترونیکی را با هدف ارائه انواع دوره ها و محصولات آموزش اينترنتي مورد نياز مخاطبين فارسي زبان به خصوص در زمینه های آموزش بازرگانی و آموزش مدیریت راه اندازي نمود. از طرف ديگر همراهي با سياستهاي کلان آموزشي و پژوهشي دولت جمهوري اسلامي، توسعه آموزش اينترنتي در سراسر کشور و نيز ايجاد يک مشارکت بزرگ ملي در راستاي دستيابي به چشم انداز بيست ساله کشور، از همان آغازين روزهاي آکادمي اينترنتي eLearnEver مد نظر مديران آن قرار گرفت.</p>

<p>در اين راستا ماموريت اصلي eLearnEver آموزش بر روی انواع ابزارهای دیجیتالی با هدف افزایش دسترسی کاربران به انواع آموزشهای کارآمد مي باشد. رسالت eLearnEver بهبود شرایط زندگی انسانها با آموزش همیشگی مي باشد. ماموریت eLearnEver موجب ارائه محصولات آکادمي eLearnEver در قالب وب،تلفن همراه، پخش کننده های صوتی، PSP و ... شده است. رصدخانه و آزمايشگاه آنلاين کيهان و راديو اينترنتي صداي آسمان از جمله اقدامات خلاقانه آکادمي براي افزايش کارآمدي آموزش الکترونیکی مي باشد. در حال حاضر پرتال آکادمي به آدرس www.eLearnEver.com دهها دوره ملي و بين المللي را در حوزه هاي مدیریت، فناوري اطلاعات، تجارت، علوم پايه، مباحث عمومي، هنر، صنايع دستي، بورس و ... برگزار مي نمايد. </p>
<p>تجهيز بدنه مدیریتي و اجرائي eLearnEver به خلاق ترين، انعطاف پذيرترين، چابکترين و جسورترين افراد، آينده اي قابل اعتماد را براي آن به تصوير کشيده است.
اکنون با حمايت بسياري از بزرگترين سازمانهاي دولتي و خصوصي و نيز به دليل کيفيت مناسب علمي، آموزشي و فني آکادمي اينترنتي eLearnEver، گواهينامه آموزشي آن از معتبرترين مدارک آموزشي مراکز مستقل آموزشي در کشور به حساب مي آيد.</p>]]></string>

</resources>
